@startuml GoFit_ERD_01_Identity
!pragma layout smetana
title ERD - Identity, profile, progress and device (public)

hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

class "auth.users" as u <<auth>> {
  id : uuid PK
}

class "user_profiles" as up <<Table>> {
  id : uuid PK/FK -> u
  user_type
  is_admin
  notification_preferences
}

class "progress_photos" as pp <<Table>> {
  id : uuid PK
  user_id : uuid FK
  storage_path
  photo_date
  category
  note
}

class "body_measurements" as bm <<Table>> {
  id : uuid PK
  user_id : uuid FK
  measurement_date
}

class "health_data" as hd <<Table>> {
  id : uuid PK
  user_id : uuid FK
  date
  steps / active_calories
  source
  unique(user_id, date, source)
}

class "push_tokens" as pt <<Table>> {
  id : uuid PK
  user_id : uuid FK
  expo_push_token
}

u ||--|| up : 1:1
u ||--o{ pp
u ||--o{ bm
u ||--o{ hd
u ||--o{ pt

note bottom of up
  database/schema/create_user_profiles_table.sql
  + migrations (columns)
end note

note bottom of hd
  database/migrations/create_health_data_wearables_v1.sql
end note

@enduml
